# Opus-code-test

./: .gitattributes  .gitignore  .markdown-link-check.json  AI_META_INTEGRATION_SUMMARY.md  ASYNC_API_IMPLEMENTATION.md  CLAUDE.md  CLAUDE.md.potential  CLAUDE.md.review  CODE_REVIEW.md  CODE_REVIEW_COMPREHENSIVE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DEVEX_SCRIPTS_SUMMARY.md  EDGE_CASE_TESTING_SUMMARY.md  GOT_ARCHITECTURE_FORENSICS.md  GOT_MIGRATION_AUDIT.md  GRAPH_PERSISTENCE_PERFORMANCE_REPORT.md  HUBRIS_CLI_DEMO.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CI_INTEGRATION.md  KNOWLEDGE_TRANSFER.md  LICENSE  MCP_IMPLEMENTATION_SUMMARY.md  MCP_SERVER_README.md  Makefile  NESTED_LOOP_IMPLEMENTATION.md  QAPV_VERIFICATION_IMPLEMENTATION.md  README.md  REASONING_METRICS_SUMMARY.md  SECURITY_REVIEW.md  STORAGE_PATTERNS_FOR_GIT_SYSTEMS.md  STORAGE_PATTERNS_INDEX.md  STORAGE_PATTERNS_QUICK_REFERENCE.md  STORAGE_TIER_PATTERNS_RESEARCH.md  SUBPROCESS_SPAWNER_IMPLEMENTATION.md  TASK_ARCHIVE.md  TASK_COMPLETION_REPORT.md  TASK_LIST.md  TASK_list.md  VALIDATION_REPORT.md  (+13 more)
.claude/: settings.local.json
.git-ml/: current_session.json
.refactor-backup/: BACKUP_PLAN.md  analysis.py  test_processor_core.py
benchmarks/: BASELINE_SUMMARY.md  after_bm25.json  baseline_tfidf.json  baseline_tfidf_real.json  prism_slm_baseline.json
book/: BOOK.md  INTERFACE_SUMMARY.md  LAYOUT_PREVIEW.txt  README.md  TEMPLATE.md  index.html  index.json  search.json  test-interface.html  verify-implementation.sh
corpus_chunks/: 2025-12-10_23-06-01_b408da4e.json  2025-12-10_23-50-49_f9cda645.json  2025-12-13_15-19-34_cf976180.json
cortical/: __init__.py  analysis.py  async_api.py  chunk_index.py  cli_wrapper.py  code_concepts.py  config.py  constants.py  diff.py  embeddings.py  fingerprint.py  fluent.py  gaps.py  layers.py  mcp_server.py  minicolumn.py  ml_storage.py  observability.py  patterns.py  persistence.py  processor.py  progress.py  py.typed  query.py  results.py  semantics.py  state_storage.py  tokenizer.py  types.py  validation.py  wal.py
cortical_package/: README.md  demo.py  pyproject.toml
cortical_package/cortical/: __init__.py  embeddings.py  gaps.py  processor.py  query.py  tokenizer.py
cortical_package/samples/: accordion_repair.txt  blockchain_consensus.txt  brain_inspired_computing.txt  cheese_affinage.txt  cortical_columns.txt  cryptocurrency_mining.txt  distributed_systems.txt  dotnet_enterprise.txt  knowledge_enhanced_nlp.txt  knowledge_transfer.txt  memory_consolidation.txt  orchid_cultivation.txt  predictive_processing.txt  semantic_similarity.txt  solar_energy_systems.txt  sourdough_breadmaking.txt
cortical_package/tests/: __init__.py  test_layers.py
docs/: BATCH1-ORCHESTRATION-PLAN.md  BATCH2-ORCHESTRATION-PLAN.md  BOOK-GENERATION-VISION.md  CONSOLIDATED_FORENSIC_REPORT.md  CONTINUOUS-CONSCIOUSNESS-ROADMAP.md  DEPENDENCIES_AND_TOOLS.md  FORENSIC_ANALYSIS_REPORT.md  MANIFESTO.md  PATTERN_DETECTION_GUIDE.md  PROGRESS_USAGE.md  README.md  REFACTOR-BOOK-GENERATION.md  TIERED_LOCKING_INDEX.md  VISION.md  agent-rejection-protocol-summary.md  agent-rejection-protocol.md  algorithms.md  analysis-got-merge-conflicts.md  api-design-examples.py  api-design-quick-reference.md  architecture-diagram.md  architecture.md  async-api.md  attention-marketplace-intelligence-exchange.md  automated-testing-techniques.md  backfill-chat-prompt.md  benchmarks.md  claude-md-generation-design.md  claude-usage.md  cli-wrapper-guide.md  client-api-design-patterns.md  code-evolution-co-change-research.md  code-evolution-model-architecture.md  code-evolution-model-delegation-prompt.md  code-evolution-model-research-paper-outline.md  code-of-ethics.md  code-review-cli-doc-refactoring.md  cognitive-pipeline-findings.md  commit-intent-parsing-research.md  complex-reasoning-workflow.md  (+113 more)
evaluation/: __init__.py  evaluator.py
examples/: async_api_demo.py  code_evolution_demo.py  context_pool_demo.py  demo_ci_integration.py  demo_progress.py  examples_results_usage.py  git_auto_committer_demo.py  got_dashboard_origin_demo.py  got_demo.py  graph_persistence_demo.py  nested_loop_demo.py  observability_demo.py  parallel_demo.py  prism_got_comprehensive_demo.py  prism_got_demo.py  prism_got_demo_corpus.py  prism_got_nlu_demo.py  prism_slm_demo.py  pubsub_demo.py  qapv_verification_demo.py  reasoning_metrics_demo.py  rejection_protocol_demo.py  repl_demo.py  spark_demo.py  subprocess_spawner_demo.py  woven_mind_demo.py  woven_mind_tutorial.ipynb
samples/: adaptive_market_cognition_overview.txt  adaptive_market_cognition_prd.txt  agent_coordination_strategies.txt  ai_assisted_development.txt  algorithmic_trading.txt  alternative_data_integration.txt  animal_behavior_pattern_recognition.txt  api_design_security.txt  application_security_fundamentals.txt  astronomical_spectroscopy.txt  attention_mechanism_research.txt  attention_mechanisms_markets.txt  authentication_patterns.txt  bat_echolocation.txt  batch_processing_patterns.txt  battery_cells.txt  beekeeping_practices.txt  biological_cells.txt  biological_pattern_recognition_markets.txt  bonsai_cultivation.txt  bottleneck_diagnosis_procedures.txt  cache_invalidation_strategies.txt  call_center_operations.txt  candlestick_patterns.txt  cartography_mapping.txt  causal_inference_markets.txt  clinical_medicine.txt  code_review_practices.txt  codebase_search_procedures.txt  cognitive_biases.txt  commonsense_reasoning.txt  compilers.txt  complaint_resolution.txt  comprehensive_machine_learning.txt  computation_staleness_management.txt  computational_complexity_tradeoffs.txt  computational_theory.txt  concept_cluster_evaluation.txt  conceptnet_overview.txt  configuration_management.txt  (+140 more)
scripts/: README_suggest_consolidation.md  analyze_corpus_balance.py  analyze_cross_domain_bridges.py  analyze_louvain_resolution.py  ascii_codebase_art.py  ascii_effects.py  ascii_visualizer_animated.py  ask_codebase.py  backfill_chat_history.py  benchmark_scoring.py  benchmark_spark.py  benchmark_sparsity.py  branch_manifest.py  ci_task_create.py  ci_task_report.py  (+76 more)
(+6309 files in other folders)
