[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortical-text-processor"
version = "2.0.0"
description = "A neocortex-inspired text processing library with zero external dependencies for semantic analysis, document retrieval, and knowledge gap detection."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Cortical Text Processor Contributors"}
]
keywords = [
    "text-processing",
    "semantic-analysis",
    "document-retrieval",
    "pagerank",
    "tfidf",
    "knowledge-graph",
    "rag",
    "nlp",
    "zero-dependency"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

# Zero runtime dependencies - pure stdlib!
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "pytest>=7.0",
    "mcp>=1.0",  # Required for MCP server tests
]

[project.urls]
Homepage = "https://github.com/scrawlsbenches/Opus-code-test"
Documentation = "https://github.com/scrawlsbenches/Opus-code-test#readme"
Repository = "https://github.com/scrawlsbenches/Opus-code-test"
Issues = "https://github.com/scrawlsbenches/Opus-code-test/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortical*"]

[tool.setuptools.package-data]
cortical = ["py.typed"]

[tool.coverage.run]
source = ["cortical"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "cortical/types.py",
    "cortical/cli_wrapper.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
# Treat warnings as errors to catch issues early
filterwarnings = ["error"]
# Exclude utility functions that start with test_ but aren't tests
# The test_then_commit function in cli_wrapper.py is a utility, not a test
python_functions = ["test_*", "!test_then_commit"]
