[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortical-text-processor"
version = "2.0.0"
description = "A neocortex-inspired text processing library with zero external dependencies for semantic analysis, document retrieval, and knowledge gap detection."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Cortical Text Processor Contributors"}
]
keywords = [
    "text-processing",
    "semantic-analysis",
    "document-retrieval",
    "pagerank",
    "tfidf",
    "knowledge-graph",
    "rag",
    "nlp",
    "zero-dependency"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

# Zero runtime dependencies - pure stdlib!
dependencies = []

[project.optional-dependencies]
# Project-specific dependencies
mcp = [
    "mcp>=1.0",
    "pydantic>=2.0",
    "httpx>=0.24",
    "uvicorn>=0.20",
    "starlette>=0.27",
    "sse-starlette>=1.0",
]
proto = [
    "protobuf>=4.0",
]
cli = [
    "click>=8.0",
]

# Development dependencies (includes all projects for testing)
dev = [
    "pytest>=7.0",
    "coverage>=7.0",
    "hypothesis>=6.0",
    "pyyaml>=6.0",  # Required for workflow integration tests
    "cortical-text-processor[mcp]",  # Include MCP for testing
]

[project.urls]
Homepage = "https://github.com/scrawlsbenches/Opus-code-test"
Documentation = "https://github.com/scrawlsbenches/Opus-code-test#readme"
Repository = "https://github.com/scrawlsbenches/Opus-code-test"
Issues = "https://github.com/scrawlsbenches/Opus-code-test/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortical*"]

[tool.setuptools.package-data]
cortical = ["py.typed"]

[tool.coverage.run]
source = ["cortical"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "cortical/types.py",
    "cortical/cli_wrapper.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
# Treat warnings as errors to catch issues early
# But allow our intentional deprecation warnings
filterwarnings = [
    "error",
    # Allow our intentional pickle deprecation warnings (SEC-008)
    "ignore:Pickle format is deprecated:DeprecationWarning",
]

# Custom markers for test organization
markers = [
    "optional: Tests requiring optional dependencies (mcp, hypothesis, numpy)",
    "fuzz: Property-based fuzzing tests (requires hypothesis)",
    "mcp: MCP server tests (requires mcp package)",
    "slow: Tests that take >5 seconds to run",
]

# Default: skip optional and slow tests during development
# CI overrides with: pytest -m "" (run all) or explicitly includes markers
addopts = "-m 'not optional and not slow'"
